--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,7 +33,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   taxi_rides_ny:
-    # Applies to all files under models/example/
+
+vars:
+  payment_type_values: [1, 2, 3, 4, 5, 6]
 
 seeds:
   taxi_rides_ny:
